--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "passport-jwt": "^4.0.0",
     "uuidv4": "^6.2.2",
     "request": "*",
-    "request-promise": "*",
+    "puppeteer": "*",
+    "puppeteer-extra": "*",
+    "puppeteer-extra-plugin-stealth": "*",
     "cheerio": "*"
   },
   "devDependencies": {
